--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "binary clock",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server"
+    "start": "webpack-dev-server",
+    "build": "webpack"
   },
   "author": "deljus",
   "license": "ISC",
